objects/Bulk_Assignment_Queue__c.object
<CustomObject>
    <fields>
        <fullName>FinishTime__c</fullName>
        <label>Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Execute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bulk Assignment Queue</label>
    <nameField>
        <displayFormat>BulkAssignQueue-{0000000000}</displayFormat>
        <label>Bulk Assignment Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Assignments Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>